# ds200

MINIRELVER2/: CMakeLists.txt
MINIRELVER2/algebra/: delete.c  insert.c  join.c  makefile  project.c  select.c
MINIRELVER2/include/: defs.h  error.h
MINIRELVER2/physical/: closecats.c  closerel.c  createcats.c  deleterec.c  error.c  findrec.c  findrelnum.c  flushpage.c  functions.c  getnextrec.c  insertrec.c  makefile  opencats.c  openrel.c  readpage.c  writerec.c
MINIRELVER2/run/: main.c  makefile  minirel
MINIRELVER2/run/gh/: attrcat  relcat
MINIRELVER2/run/shiva/: attrcat  relcat
MINIRELVER2/run/shivank/: attrcat  pop  relcat
MINIRELVER2/schema/: buildindex.c  closedb.c  create.c  createdb.c  destroy.c  destroydb.c  dropindex.c  load.c  makefile  opendb.c  print.c  quit.c  sort.c
